# cddd

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/application/: book_service.c  book_service.h
src/application/dto/: book_dto.h  book_dto_json.h
src/cli/: book_cli.c  book_cli.h  cli.c  cli.h
src/domain/book/: book.c  book.h  book_repo.h
src/infra/: book_repo.h
src/infrastructure/json/: book_dto_json.h  book_json.c
src/infrastructure/persistence/: book_repo_file.c  book_repo_file.h  book_repo_memory.c  book_repo_memory.h
